fix spacing in operator

--- a/src/app/operator/operator.component.css
+++ b/src/app/operator/operator.component.css
@@ -15,10 +15,11 @@
     
 }
 
-.component, .nav {
+.component {
+    padding-top: 50px;
     background-color: #44233A;
 }
 
-.component {
-    padding-top: 50px;
+.items {
+    max-width: 75%
 }
